src/objects/Lcm_ToolingApi__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Lcm_ApiClientId__c</fullName>
        <label>Api Client Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_ApiClientSecret__c</fullName>
        <label>Api Client Secret</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_ApiName__c</fullName>
        <label>App Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_ApiPassword__c</fullName>
        <inlineHelpText>Passwort UND Security Token ohne Freizeichen (sollte geprüft werden)</inlineHelpText>
        <label>Api Password</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_ApiUsername__c</fullName>
        <inlineHelpText>Benutzername OHNE Org-Name</inlineHelpText>
        <label>Api Username</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_ApiVersion__c</fullName>
        <label>Api Version</label>
        <precision>3</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Tooling Api</label>
</CustomObject>